[package]
name = "kennitolur"
description = "Parse and validate Icelandic government issued ID numbers (kennitölur)"
version = "0.2.0"
authors = ["Árni Dagur <arni@dagur.eu>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["kennitala", "icelandic"]
repository = "https://github.com/ArniDagur/kennitolur"

[features]
default = ["chrono"]

[dependencies]
chrono = { version = "0.4", optional = true }
